<resources>
    <string name="app_name">Nasa</string>
    <string name="retry">Повторить</string>

    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="favourite">favourite</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="imageDesc">Картинка</string>
    <string name="today">Сегодня</string>
    <string name="yesterday">Вчера</string>
    <string name="two_days_ago">Позавчера</string>
    <string name="red_theme">Красная тема</string>
    <string name="blue_theme">Синяя тема</string>
    <string name="green_theme">Зеленная тема</string>
    <string name="def_title">По умолчанию</string>
    <string name="theme_title">Тема приложения:</string>
    <string name="theme_day_night_title">Смена режима \"День/Ночь\"</string>
    <string name="day_mode">День</string>
    <string name="night_mode">Ночь</string>
    <string name="home">Home</string>
    <string name="mars">Mars</string>
    <string name="moon">Moon</string>
    <string name="header">Заголовок</string>
    <string name="meteorite">Meteorite</string>
    <string name="nebula">Nebula</string>
    <string name="fall_load_data">Не удалось загрузить данные</string>
    <string name="title_mars">Чудесные просторы Марса</string>
    <string name="descriptions_mars">На фото видно камни и песок в кратере Даниэлсона (диаметр кратера около 67 км), расположенного на юго-востоке области Arabia Terra.</string>
    <string name="user_help">Нажмите для полученния информации</string>
    <string name="descriptions_moon">Луна́ — единственный естественный спутник Земли.</string>
    <string name="description_append_mars">Добавить новый элемент Марса</string>
    <string name="test_ux_text">Тестовый текст</string>
</resources>