<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_view_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/bottom_view_mars"
        android:icon="@drawable/ic_mars"
        android:title="@string/mars" />

    <item
        android:id="@+id/bottom_view_moon"
        android:icon="@drawable/ic_moon"
        android:title="@string/moon" />

    <item
        android:id="@+id/bottom_view_meteorite"
        android:icon="@drawable/ic_meteorite"
        android:title="@string/meteorite" />

    <item
        android:id="@+id/bottom_view_settings"
        android:icon="@drawable/ic_settings_menu"
        android:title="@string/settings" />

</menu>