<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/RadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_title" />

        <RadioButton
            android:id="@+id/radioButtonDef"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/def_title" />

        <RadioButton
            android:id="@+id/radioButtonRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/red_theme" />

        <RadioButton
            android:id="@+id/radioButtonBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blue_theme" />

        <RadioButton
            android:id="@+id/radioButtonGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/green_theme" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/RadioGroupDayNight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RadioGroup"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_day_night_title" />

        <RadioButton
            android:id="@+id/radioButtonDefMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/def_title" />

        <RadioButton
            android:id="@+id/radioButtonDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_mode" />

        <RadioButton
            android:id="@+id/radioButtonNight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/night_mode" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>